# proto

./: .gitignore  README.md  build.sh  build_installers.sh  install.html  install.sh  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
agent/: __init__.py  clickhouse_agent.py
config/: settings.py
providers/: __init__.py  local_llm.py  openrouter.py
tools/: clickhouse_tools.py  data_tools.py
ui/: beautiful_interface.py  minimal_interface.py  onboarding.py  settings_manager.py
utils/: logging.py
