[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proto-clickhouse-agent"
version = "1.0.0"
description = "ClickHouse AI Agent - Natural language interface for ClickHouse databases"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Proto Team", email = "team@proto.dev"}
]
maintainers = [
    {name = "Proto Team", email = "team@proto.dev"}
]
keywords = ["clickhouse", "ai", "agent", "database", "sql", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.40.0",
    "clickhouse-connect>=0.6.0",
    "clickhouse-driver>=0.2.0",
    "pandas>=1.5.0",
    "numpy>=1.20.0",
    "plotly>=5.0.0",
    "matplotlib>=3.5.0",
    "httpx>=0.24.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "orjson>=3.8.0",
    "structlog>=23.0.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/vishprometa/proto"
Documentation = "https://proto.dev"
Repository = "https://github.com/vishprometa/proto"
Issues = "https://github.com/vishprometa/proto/issues"
Changelog = "https://github.com/vishprometa/proto/releases"

[project.scripts]
proto = "main:app"

[tool.setuptools]
packages = ["agent", "config", "providers", "tools", "ui", "utils"]
py-modules = ["main"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["agent", "config", "providers", "tools", "ui", "utils"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "clickhouse_connect.*",
    "clickhouse_driver.*",
    "plotly.*",
    "matplotlib.*",
    "textual.*",
    "rich.*",
]
ignore_missing_imports = true
